--- a/src/app/ventas/pages/registro/fichas/fichas.component.html
+++ b/src/app/ventas/pages/registro/fichas/fichas.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col text-end mb-3">
         <p class="text-secondary small">
-            <span class="badge badge-sm bg-blue">Información</span>
+            <span class="badge badge-sm bg-blue">Información Enviada</span>
             <span class="badge badge-sm bg-orange mx-2">No Contesta</span>
             <span class="badge badge-sm bg-red">No Interesado</span>
             <span class="badge badge-sm bg-black mx-2">Próximo Grupo</span>
@@ -32,7 +32,7 @@
                         <i class="bi bi-person-dash text-danger rounded mx-1" *ngIf="valalumnos.seguimiento.no_interesado.length>0"></i>
                         <i class="bi bi-telephone-x text-warning rounded" *ngIf="valalumnos.seguimiento.no_contesta.length>0"></i>
                         <i class="bi bi-person-workspace text-dark rounded mx-1" *ngIf="valalumnos.seguimiento.proximo_grupo.length>0"></i>
-                        <i class="bi bi-cash-coin text-success rounded" *ngIf="valalumnos.seguimiento.proximo_grupo.length>0"></i>
+                        <i class="bi bi-cash-coin text-success rounded" *ngIf="valalumnos.seguimiento.compromiso_pago.length>0"></i>
                         {{valalumnos.names}}
                     </td>
                     <td class="text-center">{{valalumnos.num_doc}}</td>
@@ -376,7 +376,7 @@
                         <div class="col">
                             <h6 class="fw-medium mb-0">Historial Seguimiento</h6>
                             <p class="text-secondary small">
-                                <span class="badge badge-sm bg-blue">Información</span>
+                                <span class="badge badge-sm bg-blue">Información Enviada</span>
                                 <span class="badge badge-sm bg-orange mx-2">No Contesta</span>
                                 <span class="badge badge-sm bg-red">No Interesado</span>
                                 <span class="badge badge-sm bg-black mx-2">Próximo Grupo</span>
@@ -390,7 +390,7 @@
                         <thead class="d-none">
                             <tr class="text-muted">
                                 <th class="w-200">Historial Seguimiento</th>
-                                <th data-breakpoints="xs sm" class="w-80">No Contesta - No Interesado - Información - Próximo Grupo</th>
+                                <th data-breakpoints="xs sm" class="w-80">No Contesta - No Interesado - Información Enviada - Próximo Grupo</th>
                             </tr>
                         </thead>
                         <tbody>
