--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -5,14 +5,15 @@
                 <h6>Principal</h6>
             </div>
             <div class="col-auto">
-                <a class="text-light" data-bs-toggle="collapse" data-bs-target="#usersidebarprofile" aria-expanded="false" role="button" aria-controls="usersidebarprofile">
+                <a class="text-light" data-bs-toggle="collapse" data-bs-target="#usersidebarprofile" aria-expanded="false" 
+                    role="button" aria-controls="usersidebarprofile">
                     <i class="bi bi-person-circle"></i>
                 </a>
             </div>
         </div>
 
         <!-- user information -->
-        <div class="row text-center collapse " id="usersidebarprofile">
+        <div class="row text-center collapse show" id="usersidebarprofile">
             <div class="col-12">
                 <div class="avatar avatar-100 rounded-circle shadow-sm mb-3 bg-white">
                     <figure class="avatar avatar-90 rounded-circle coverimg">
