--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -709,7 +709,7 @@
                                 <div class="col ps-0 align-self-center d-none d-lg-block">
                                     <p class="mb-0">
                                         <span class="text-light username">{{ userName }}</span><br>
-                                        <small class="text-light small">Perú</small>
+                                        <small class="text-light small">{{ perfil.dni }}</small>
                                     </p>
                                 </div>
                                 <div class="col ps-0 align-self-center d-none d-lg-block">
