--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-12 mb-4">
                 <h6 class="mb-1 text-light" id="usernamedisplay">{{userName}}</h6>
-                <p class="text-light small">Perú</p>
+                <p class="text-light small text-capitalize">{{user_rol}}</p>
             </div>
         </div>
 
