--- a/src/app/alumno/pages/pagos/pagos.component.html
+++ b/src/app/alumno/pages/pagos/pagos.component.html
@@ -152,7 +152,7 @@
                                             <td>
                                                 <button *ngIf="is_pay"
                                                         class="btn btn-primary text-white text-center"
-                                                        (click)="openModalPay()">
+                                                        (click)="exectPayment()">
                                                     <small>Pagar</small>
                                                 </button>
                                             </td>
